# egosplit-sknetwork

./: LICENSE  example.ipynb  pyproject.toml  readme.md
egosplit_sknetwork/: __init__.py  egosplit_sknetwork.py
