[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "egosplit_sknetwork"
version = "0.0.3"
authors = [
  { name="Ryan DeWolfe", email="ryandewolfe33@gmail.com" },
]
description = "Fast python implementation of the egosplitting framework for overlapping clustering using sknetwork."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.10"
dependencies = [
    "numpy >= 2.0",
    "scikit-network >= 0.33",
    "numba >= 0.60.0",
]